// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`idが設定できる 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -13,10 +13,10 @@
    \\"estimator\\": Object {
      \\"id\\": null,
      \\"result\\": \\"\\",
    },
    \\"timer\\": Object {
-     \\"id\\": null,
+     \\"id\\": 1234,
      \\"isActive\\": false,
      \\"scanSpeed\\": 500,
    },
  }"
`;

exports[`isActiveが設定できる falseの場合 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`isActiveが設定できる trueの場合 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -14,9 +14,9 @@
      \\"id\\": null,
      \\"result\\": \\"\\",
    },
    \\"timer\\": Object {
      \\"id\\": null,
-     \\"isActive\\": false,
+     \\"isActive\\": true,
      \\"scanSpeed\\": 500,
    },
  }"
`;

exports[`scanSpeedが設定できる 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -15,8 +15,8 @@
      \\"result\\": \\"\\",
    },
    \\"timer\\": Object {
      \\"id\\": null,
      \\"isActive\\": false,
-     \\"scanSpeed\\": 500,
+     \\"scanSpeed\\": 234,
    },
  }"
`;
